--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Music appreciation'
 - !lcc 'MT'
+- GITenberg
 title: 'How to Listen to Music, 7th ed.
 
   Hints and Suggestions to Untaught Lovers of the Art'
